Add ZeroClick Probe

--- a/printer.cfg
+++ b/printer.cfg
@@ -1,4 +1,4 @@
-[include config.d/*]
+[include config.d/*.cfg]
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_36FFD4054D4D313821700443-if00
@@ -216,15 +216,6 @@ timeout: 1800
 #speed: 50.0
 #z_hop: 5
 
-## To be used with BED_SCREWS_ADJUST
-[bed_screws]
-screw1: 60,5
-screw1_name: front screw
-screw2: 5,115
-screw2_name: back left
-screw3: 115,115
-screw3_name: back right
-
 #####################################################################
 #	Macros
 #####################################################################
@@ -234,9 +225,9 @@ gcode:
     # Parameters
     {% set bedtemp = params.BED|int %}
     {% set hotendtemp = params.HOTEND|int %}
-    {% set chambertemp = params.CHAMBER|default(0)|int %}
     {% set zerofilter_speed = params.ZEROFILTER|default(0.0)|float %}
     {% set filament_type = params.FILAMENT|default("PLA")|string %}
+    {% set mesh_profile = 'bedtemp_' + (bedtemp|string) %}
     G28
     G90
     G1 Z5
@@ -249,6 +240,11 @@ gcode:
     #TEMPERATURE_WAIT SENSOR="" MINIMUM={chambertemp}   ; wait for chamber temp
     # <insert your routines here>
     M109 S{hotendtemp}                                                           ; set & wait for hotend temp
+    {% if mesh_profile in printer.bed_mesh.profiles %}
+        BED_MESH_PROFILE LOAD={mesh_profile}
+    {% else %}
+        BED_MESH_CALIBRATE PROFILE={mesh_profile}
+    {% endif %}
     PURGE
    
 [gcode_macro PRINT_END]
@@ -337,3 +333,39 @@ gcode:
 #*#
 #*# [stepper_z]
 #*# position_endstop = -0.250
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	-0.651250, -0.657500, -0.676250, -0.708750
+#*# 	-0.658750, -0.667500, -0.675000, -0.678750
+#*# 	-0.677500, -0.668750, -0.671250, -0.662500
+#*# 	-0.692500, -0.681250, -0.667500, -0.642500
+#*# tension = 0.2
+#*# min_x = 20.0
+#*# algo = lagrange
+#*# y_count = 4
+#*# mesh_y_pps = 2
+#*# min_y = 20.0
+#*# x_count = 4
+#*# max_y = 99.98
+#*# mesh_x_pps = 2
+#*# max_x = 99.98
+#*#
+#*# [bed_mesh bedtemp_110]
+#*# version = 1
+#*# points =
+#*# 	  -0.496250, -0.486250, -0.487500, -0.493750
+#*# 	  -0.510000, -0.502500, -0.498750, -0.492500
+#*# 	  -0.535000, -0.511250, -0.503750, -0.490000
+#*# 	  -0.556250, -0.538750, -0.507500, -0.495000
+#*# tension = 0.2
+#*# min_x = 20.0
+#*# algo = lagrange
+#*# y_count = 4
+#*# mesh_y_pps = 2
+#*# min_y = 20.0
+#*# x_count = 4
+#*# max_y = 99.98
+#*# mesh_x_pps = 2
+#*# max_x = 99.98
