--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -1,8 +1,10 @@
 
 #~# --- Do not edit below this line. This section is auto generated --- #~#
-
 #~#
 #~# [main]
+#~# theme = material-darker
+#~# font_size = small
+#~# move_speed_xy = 100
+#~# move_speed_z = 50
 #~# print_sort_dir = date_desc
-#~# theme = colorized
 #~#
