--- a/cfgs/probe/klicky-variables.cfg
+++ b/cfgs/probe/klicky-variables.cfg
@@ -11,15 +11,15 @@
 # the 1000 values below is to give an error instead of doing something wrong, hopefully, this won't be used is a printer larger than 1 meter
 
 [gcode_macro _User_Variables]
-variable_verbose:             True    # Enable verbose output
+variable_verbose:            False    # Enable verbose output
 variable_debug:              False    # Enable Debug output
-variable_travel_speed:         700    # how fast all other travel moves will be performed when running these macros
-variable_move_accel:         11000    # how fast should the toolhead accelerate when moving
-variable_dock_speed:            50    # how fast should the toolhead move when docking the probe for the final movement
+variable_travel_speed:         400    # how fast all other travel moves will be performed when running these macros
+variable_move_accel:          5000    # how fast should the toolhead accelerate when moving
+variable_dock_speed:            75    # how fast should the toolhead move when docking the probe for the final movement
 variable_release_speed:         75    # how fast should the toolhead move to release the hold of the magnets after docking
-variable_z_drop_speed:          20    # how fast the z will lower when moving to the z location to clear the probe
+variable_z_drop_speed:          50    # how fast the z will lower when moving to the z location to clear the probe
 
-variable_safe_z:         	    25    # Minimum Z for attach/dock and homing functions
+variable_safe_z:         	    50    # Minimum Z for attach/dock and homing functions
 # if true it will move the bed away from the nozzle when Z is not homed
 variable_enable_z_hop:        True    # set this to false for beds that fall significantly under gravity (almost to Z max)
 
@@ -29,32 +29,32 @@ variable_max_bed_x:            120    # maximum Bed size avoids doing a probe_ac
 # if a separate Z endstop switch is in
 # use, specify the coordinates of the switch here (Voron).
 # Set to 0 to have the probe move to center of bed
-variable_z_endstop_x:         118
-variable_z_endstop_y:         118
+variable_z_endstop_x:         82
+variable_z_endstop_y:         120
 
 #Check the printer specific documentation on klipper Dock/Undock configuration, these are dummy values
 #dock location 
-variable_docklocation_x:      0    # X Dock position
-variable_docklocation_y:      120    # Y Dock position
-variable_docklocation_z:      -128    # Z dock position (-128 for a gantry/frame mount)
+variable_docklocation_x:      116 # X Dock position
+variable_docklocation_y:      95  # Y Dock position
+variable_docklocation_z:      -128 # Z dock position (-128 for a gantry/frame mount)
 
 #The following variables are used if the dock is deployed and retracted via a servo motor
-variable_enable_dock_servo:  False    # Set to true if your klicky dock is servo-controlled
-variable_servo_name:        'NAME'    # The name of the dock servo defined in printer.cfg under [servo]
-variable_servo_deploy:          10    # This EXAMPLE is the value used to deploy the servo fully
-variable_servo_retract:         11    # This EXAMPLE is the value used to retract the servo fully (initial_angle in [servo] config)
-variable_servo_delay:          250    # This is a delay to wait the servo to reach the requested position, be carefull with high values
+variable_enable_dock_servo:   True        # Set to true if your klicky dock is servo-controlled
+variable_servo_name:        'slideSwipe'  # The name of the dock servo defined in printer.cfg under [servo]
+variable_servo_deploy:         180        # This EXAMPLE is the value used to deploy the servo fully
+variable_servo_retract:          0        # This EXAMPLE is the value used to retract the servo fully (initial_angle in [servo] config)
+variable_servo_delay:          250        # This is a delay to wait the servo to reach the requested position, be carefull with high values
 
 #Dock move, final toolhead movement to release the probe on the dock
 #it's a relative move
-Variable_dockmove_x:          	 0
-Variable_dockmove_y:           -20
+Variable_dockmove_x:            20
+Variable_dockmove_y:             0 # -20
 Variable_dockmove_z:             0
 
 #Attach move. final toolhead movement to attach the probe on the mount
 #it's a relative move
-Variable_attachmove_x:         -20
-Variable_attachmove_y:           0
+Variable_attachmove_x:          0#20 # -20
+Variable_attachmove_y:          0#10
 Variable_attachmove_z:           0
 
 #Umbilical to help untangle the umbilical in difficult situations
@@ -72,13 +72,13 @@ variable_version:                1    # Helps users to update the necessary vari
 
 #Below this remark, you normally do not need to configure
 #Attach move2
-Variable_attachmove2_x:          0    # intermediate toolhead movement to attach
-Variable_attachmove2_y:         20    # the probe on the dock
-Variable_attachmove2_z:          0    # (can be negative)
+Variable_attachmove2_x:          20 # intermediate toolhead movement to attach
+Variable_attachmove2_y:          0  # the probe on the dock
+Variable_attachmove2_z:          0  # (can be negative)
 
-variable_home_backoff:          10    # how many mm to move away from the endstop after homing
+variable_home_backoff:          40    # how many mm to move away from the endstop after homing
 
-variable_override_homing:      'Y'    # configures what axis to home first
+variable_override_homing:      'X'    # configures what axis to home first
                                       #  '' = default klicky behavior (tries to avoid the hitting the dock
                                       # 'X' = forces X to home first 
                                       # 'Y' = forces Y to home first  
