--- a/moonraker.conf
+++ b/moonraker.conf
@@ -1,11 +1,7 @@
 [server]
 host: 0.0.0.0
 port: 7125
-enable_debug_logging: False
 klippy_uds_address: /tmp/klippy_uds
-
-[database]
-database_path: /home/voron/.moonraker_database
 
 [authorization]
 trusted_clients:
@@ -23,8 +19,7 @@ cors_domains:
     http://*://app.fluidd.xyz
 
 [file_manager]
-config_path: /home/voron/klipper_config
-log_path: /home/voron/klipper_logs
+enable_object_processing: True
 
 [octoprint_compat]
 
@@ -34,20 +29,32 @@ log_path: /home/voron/klipper_logs
 channel: dev
 refresh_interval: 168
 
-[update_manager mainsail]
-type: web
-repo: mainsail-crew/mainsail
-path: ~/mainsail
-
 [update_manager fluidd]
 type: web
 repo: fluidd-core/fluidd
 path: ~/fluidd
 
-#[update_manager KlipperScreen]
-#type: git_repo
-#path: /home/voron/KlipperScreen
-#origin: https://github.com/jordanruthe/KlipperScreen.git
-#env: /home/voron/.KlipperScreen-env/bin/python
-#requirements: scripts/KlipperScreen-requirements.txt
-#install_script: scripts/KlipperScreen-install.sh
+[update_manager KlipperScreen]
+type: git_repo
+path: /home/voron/KlipperScreen
+origin: https://github.com/jordanruthe/KlipperScreen.git
+env: /home/voron/.KlipperScreen-env/bin/python
+requirements: scripts/KlipperScreen-requirements.txt
+install_script: scripts/KlipperScreen-install.sh
+
+[update_manager klipper_tmc_autotune]
+type: git_repo
+channel: dev
+path: ~/klipper_tmc_autotune
+origin: https://github.com/andrewmcgr/klipper_tmc_autotune.git
+managed_services: klipper
+primary_branch: main
+install_script: install.sh
+
+[update_manager Klipper-Adaptive-Meshing-Purging]
+type: git_repo
+channel: dev
+path: ~/Klipper-Adaptive-Meshing-Purging
+origin: https://github.com/kyleisah/Klipper-Adaptive-Meshing-Purging.git
+managed_services: klipper
+primary_branch: main
